--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,9 @@
         style="@style/IndexButton"
         android:id="@+id/media"
         android:text="media" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        style="@style/IndexButton"
+        android:id="@+id/creator"
+        android:text="creator" />
 </LinearLayout>
