--- a/media/src/main/res/values/styles.xml
+++ b/media/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:layout_marginEnd">15dp</item>
     </style>
 
-    <style name="List">
+    <style name="Match_Match_10_15_10_15">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_marginTop">10dp</item>
