decode a mp4 right

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,11 @@
 
     <androidx.appcompat.widget.AppCompatButton
         style="@style/IndexButton"
+        android:id="@+id/decoder"
+        android:text="decoder" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        style="@style/IndexButton"
         android:id="@+id/creator"
         android:text="creator" />
 </LinearLayout>
