--- a/media/src/main/res/layout/activity_simple_codec.xml
+++ b/media/src/main/res/layout/activity_simple_codec.xml
@@ -10,6 +10,7 @@
         android:id="@+id/sfv"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent" />
 
 
