--- a/media/src/main/res/layout/activity_simple_codec.xml
+++ b/media/src/main/res/layout/activity_simple_codec.xml
@@ -13,5 +13,22 @@
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/media_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sfv" />
+
+    <Button
+        android:id="@+id/repack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="repack"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/media_info" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
